d77 computation with numpy

--- a/77-numpy/Computation_with_NumPy_and_N_Dimensional_Arrays.ipynb
+++ b/77-numpy/Computation_with_NumPy_and_N_Dimensional_Arrays.ipynb
@@ -88,24 +88,97 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "ITaA6vmejMNF"
+    "id": "ITaA6vmejMNF",
+    "ExecuteTime": {
+     "end_time": "2026-01-08T00:20:50.509558Z",
+     "start_time": "2026-01-08T00:20:50.478152Z"
+    }
    },
    "source": [
-    ""
+    "# create array\n",
+    "my_array = np.array([1.1, 9.2, 8.1, 4.7])"
    ],
-   "execution_count": 1,
-   "outputs": []
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "metadata": {
-    "id": "Tq5KrExnjNn0"
+    "id": "Tq5KrExnjNn0",
+    "ExecuteTime": {
+     "end_time": "2026-01-08T00:21:44.402113Z",
+     "start_time": "2026-01-08T00:21:44.374313Z"
+    }
    },
    "source": [
-    ""
+    "# show rows and columns\n",
+    "my_array.shape"
    ],
-   "execution_count": 1,
-   "outputs": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4,)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-08T00:21:16.491283Z",
+     "start_time": "2026-01-08T00:21:16.463968Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# access array elements\n",
+    "my_array[2]"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(8.1)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-08T00:21:46.317006Z",
+     "start_time": "2026-01-08T00:21:46.283459Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# dimensions of my_array with the ndim attribute\n",
+    "my_array.ndim"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -119,25 +192,100 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "97iTilPTAGpm"
+    "id": "97iTilPTAGpm",
+    "ExecuteTime": {
+     "end_time": "2026-01-08T00:22:38.623631Z",
+     "start_time": "2026-01-08T00:22:38.612610Z"
+    }
    },
    "source": [
     "array_2d = np.array([[1, 2, 3, 9], \n",
     "                     [5, 6, 7, 8]])"
    ],
-   "execution_count": 2,
-   "outputs": []
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "metadata": {
-    "id": "885B89_IjFWr"
+    "id": "885B89_IjFWr",
+    "ExecuteTime": {
+     "end_time": "2026-01-08T00:25:07.123353Z",
+     "start_time": "2026-01-08T00:25:07.092765Z"
+    }
    },
    "source": [
-    ""
+    "print(f'array_2d has {array_2d.ndim} dimensions')\n",
+    "print(f'Its shape is {array_2d.shape}')\n",
+    "print(f'It has {array_2d.shape[0]} rows and {array_2d.shape[1]} columns')\n",
+    "print(array_2d)"
    ],
-   "execution_count": 2,
-   "outputs": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array_2d has 2 dimensions\n",
+      "Its shape is (2, 4)\n",
+      "It has 2 rows and 4 columns\n",
+      "[[1 2 3 9]\n",
+      " [5 6 7 8]]\n"
+     ]
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-08T00:25:49.398309Z",
+     "start_time": "2026-01-08T00:25:49.374458Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# how to access the 3rd value in the 2nd row\n",
+    "array_2d[1,2]"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(7)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-08T00:26:29.431679Z",
+     "start_time": "2026-01-08T00:26:29.403607Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# access an entire row and all the values therein\n",
+    "array_2d[0, :]"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 9])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -160,7 +308,11 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "2ROMzYaxAgXC"
+    "id": "2ROMzYaxAgXC",
+    "ExecuteTime": {
+     "end_time": "2026-01-08T00:34:25.576783Z",
+     "start_time": "2026-01-08T00:34:25.567552Z"
+    }
    },
    "source": [
     "mystery_array = np.array([[[0, 1, 2, 3],\n",
@@ -174,52 +326,116 @@
     "\n",
     "# Note all the square brackets!"
    ],
-   "execution_count": 3,
-   "outputs": []
+   "outputs": [],
+   "execution_count": 13
   },
   {
    "cell_type": "code",
    "metadata": {
-    "id": "s3-I3tYSjC1R"
+    "id": "s3-I3tYSjC1R",
+    "ExecuteTime": {
+     "end_time": "2026-01-08T00:34:28.051188Z",
+     "start_time": "2026-01-08T00:34:28.016964Z"
+    }
    },
    "source": [
-    ""
+    "print(f'We have {mystery_array.ndim} dimensions')\n",
+    "print(f'The shape is {mystery_array.shape}')"
    ],
-   "execution_count": 3,
-   "outputs": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We have 3 dimensions\n",
+      "The shape is (3, 2, 4)\n"
+     ]
+    }
+   ],
+   "execution_count": 14
   },
   {
    "cell_type": "code",
    "metadata": {
-    "id": "AvUs5gRPjDIT"
+    "id": "AvUs5gRPjDIT",
+    "ExecuteTime": {
+     "end_time": "2026-01-08T00:35:13.412625Z",
+     "start_time": "2026-01-08T00:35:13.379993Z"
+    }
    },
    "source": [
-    ""
+    "# access the value 18\n",
+    "mystery_array[2, 1, 3]"
    ],
-   "execution_count": 3,
-   "outputs": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(18)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 15
   },
   {
    "cell_type": "code",
    "metadata": {
-    "id": "G3Ek8nDTjCvn"
+    "id": "G3Ek8nDTjCvn",
+    "ExecuteTime": {
+     "end_time": "2026-01-08T00:35:38.172776Z",
+     "start_time": "2026-01-08T00:35:38.137753Z"
+    }
    },
    "source": [
-    ""
+    "# values [97, 0, 27, 18] live on the 3rd axis and are on position 2 for the first axis and position 1 on the second axis\n",
+    "mystery_array[2, 1, :]"
    ],
-   "execution_count": 3,
-   "outputs": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([97,  0, 27, 18])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 16
   },
   {
    "cell_type": "code",
    "metadata": {
-    "id": "1SeRB6MejAbc"
+    "id": "1SeRB6MejAbc",
+    "ExecuteTime": {
+     "end_time": "2026-01-08T00:36:02.975926Z",
+     "start_time": "2026-01-08T00:36:02.924488Z"
+    }
    },
    "source": [
-    ""
+    "# retrieve all the first elements on the third axis\n",
+    "mystery_array[:, :, 0]"
    ],
-   "execution_count": 3,
-   "outputs": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  4],\n",
+       "       [ 7,  5],\n",
+       "       [ 5, 97]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
