d77 computation with numpy

--- a/77-numpy/Computation_with_NumPy_and_N_Dimensional_Arrays.ipynb
+++ b/77-numpy/Computation_with_NumPy_and_N_Dimensional_Arrays.ipynb
@@ -885,63 +885,112 @@
    "metadata": {
     "id": "GbSwkEwHX9lb",
     "ExecuteTime": {
-     "end_time": "2026-01-08T18:47:13.669972Z",
-     "start_time": "2026-01-08T18:47:13.647929Z"
+     "end_time": "2026-01-08T22:35:22.412907Z",
+     "start_time": "2026-01-08T22:35:22.368107Z"
     }
    },
    "source": [
     "v1 = np.array([4, 5, 2, 7])\n",
-    "v2 = np.array([2, 1, 3, 3])"
+    "v2 = np.array([2, 1, 3, 3])\n",
+    "v1 + v2"
    ],
-   "outputs": [],
-   "execution_count": 17
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6,  6,  5, 10])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 51
   },
   {
    "cell_type": "code",
    "metadata": {
     "id": "vPa5kK-6fz1v",
     "ExecuteTime": {
-     "end_time": "2026-01-08T18:47:13.686996Z",
-     "start_time": "2026-01-08T18:47:13.671016Z"
+     "end_time": "2026-01-08T22:35:59.949029Z",
+     "start_time": "2026-01-08T22:35:59.925988Z"
     }
    },
    "source": [
     "# Python Lists vs ndarrays\n",
     "list1 = [4, 5, 2, 7]\n",
-    "list2 = [2, 1, 3, 3]"
+    "list2 = [2, 1, 3, 3]\n",
+    "list1 + list2"
    ],
-   "outputs": [],
-   "execution_count": 18
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 5, 2, 7, 2, 1, 3, 3]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 52
   },
   {
    "cell_type": "code",
    "metadata": {
     "id": "DfPCOJqBiugK",
     "ExecuteTime": {
-     "end_time": "2026-01-08T18:47:13.704474Z",
-     "start_time": "2026-01-08T18:47:13.687879Z"
+     "end_time": "2026-01-08T22:36:28.022208Z",
+     "start_time": "2026-01-08T22:36:27.997673Z"
     }
    },
    "source": [
-    ""
+    "# multiply arrays\n",
+    "v1 * v2"
    ],
-   "outputs": [],
-   "execution_count": 18
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8,  5,  6, 21])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 53
   },
   {
    "cell_type": "code",
    "metadata": {
     "id": "AYNctOyniucr",
     "ExecuteTime": {
-     "end_time": "2026-01-08T18:47:13.721801Z",
-     "start_time": "2026-01-08T18:47:13.705293Z"
+     "end_time": "2026-01-08T22:36:49.410488Z",
+     "start_time": "2026-01-08T22:36:49.364010Z"
     }
    },
    "source": [
-    ""
+    "# multiply lists\n",
+    "list1 * list2"
    ],
-   "outputs": [],
-   "execution_count": 18
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can't multiply sequence by non-int of type 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mTypeError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[54]\u001B[39m\u001B[32m, line 2\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;66;03m# multiply lists\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m2\u001B[39m \u001B[43mlist1\u001B[49m\u001B[43m \u001B[49m\u001B[43m*\u001B[49m\u001B[43m \u001B[49m\u001B[43mlist2\u001B[49m\n",
+      "\u001B[31mTypeError\u001B[39m: can't multiply sequence by non-int of type 'list'"
+     ]
+    }
+   ],
+   "execution_count": 54
   },
   {
    "cell_type": "markdown",
