d77 computation with numpy

--- a/77-numpy/Computation_with_NumPy_and_N_Dimensional_Arrays.ipynb
+++ b/77-numpy/Computation_with_NumPy_and_N_Dimensional_Arrays.ipynb
@@ -1006,45 +1006,66 @@
    "metadata": {
     "id": "E_ooq80ziprz",
     "ExecuteTime": {
-     "end_time": "2026-01-08T18:47:13.742122Z",
-     "start_time": "2026-01-08T18:47:13.722614Z"
+     "end_time": "2026-01-09T00:22:32.723022Z",
+     "start_time": "2026-01-09T00:22:32.687783Z"
     }
    },
    "source": [
-    ""
+    "array_2d = np.array([[1, 2, 3, 4],\n",
+    "                     [5, 6, 7, 8]])"
    ],
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 55
   },
   {
    "cell_type": "code",
    "metadata": {
     "id": "gya2xlxxipoi",
     "ExecuteTime": {
-     "end_time": "2026-01-08T18:47:13.759756Z",
-     "start_time": "2026-01-08T18:47:13.743146Z"
+     "end_time": "2026-01-09T00:22:33.910548Z",
+     "start_time": "2026-01-09T00:22:33.888580Z"
     }
    },
-   "source": [
-    ""
+   "source": "array_2d + 10",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[11, 12, 13, 14],\n",
+       "       [15, 16, 17, 18]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
    ],
-   "outputs": [],
-   "execution_count": 18
+   "execution_count": 56
   },
   {
    "cell_type": "code",
    "metadata": {
     "id": "Lhmedp3Qil5I",
     "ExecuteTime": {
-     "end_time": "2026-01-08T18:47:13.778595Z",
-     "start_time": "2026-01-08T18:47:13.761365Z"
+     "end_time": "2026-01-09T00:22:57.861126Z",
+     "start_time": "2026-01-09T00:22:57.837872Z"
     }
    },
-   "source": [
-    ""
+   "source": "array_2d * 5",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5, 10, 15, 20],\n",
+       "       [25, 30, 35, 40]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
    ],
-   "outputs": [],
-   "execution_count": 18
+   "execution_count": 57
   },
   {
    "cell_type": "markdown",
@@ -1067,8 +1088,8 @@
      "height": 68
     },
     "ExecuteTime": {
-     "end_time": "2026-01-08T18:47:13.801923Z",
-     "start_time": "2026-01-08T18:47:13.779493Z"
+     "end_time": "2026-01-09T00:24:23.808088Z",
+     "start_time": "2026-01-09T00:24:23.771255Z"
     }
    },
    "source": [
@@ -1095,7 +1116,7 @@
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 58
   },
   {
    "cell_type": "markdown",
@@ -1115,9 +1136,7 @@
      "start_time": "2026-01-08T18:47:13.804755Z"
     }
    },
-   "source": [
-    ""
-   ],
+   "source": "c = np.matmul(a1, b1)",
    "outputs": [],
    "execution_count": 19
   },
