d79 nobel prize analysis

--- a/76-google-play-store/Google Play Store App Analytics.ipynb
+++ b/76-google-play-store/Google Play Store App Analytics.ipynb
@@ -4234,7 +4234,7 @@
     "names=ratings.index,\n",
     "hole=0.6,\n",
     ")\n",
-    "fig.update_traces(textposition='outside', textinfo='percent+label')\n",
+    "fig.update_traces(textpositiox`n='outside', textinfo='percent+label')\n",
     "\n",
     "fig.show()"
    ],
