d81 home price analysis

--- a/81-predict-house-prices/Multivariable_Regression_and_Valuation_Model.ipynb
+++ b/81-predict-house-prices/Multivariable_Regression_and_Valuation_Model.ipynb
@@ -103,8 +103,8 @@
    "metadata": {
     "id": "3iYmJ3Fb-d2i",
     "ExecuteTime": {
-     "end_time": "2026-01-13T00:09:17.365074Z",
-     "start_time": "2026-01-13T00:09:16.861761Z"
+     "end_time": "2026-01-13T12:22:28.694009114Z",
+     "start_time": "2026-01-13T12:22:28.524305303Z"
     }
    },
    "source": [
@@ -118,7 +118,7 @@
     "from sklearn.linear_model import LinearRegression"
    ],
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -141,15 +141,15 @@
    "metadata": {
     "id": "AUvdOhPIC4Me",
     "ExecuteTime": {
-     "end_time": "2026-01-13T00:09:24.123049Z",
-     "start_time": "2026-01-13T00:09:24.103866Z"
+     "end_time": "2026-01-13T12:22:32.359187451Z",
+     "start_time": "2026-01-13T12:22:32.331643821Z"
     }
    },
    "source": [
     "pd.options.display.float_format = '{:,.2f}'.format"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -167,13 +167,13 @@
    "metadata": {
     "id": "GlG_B81bYakP",
     "ExecuteTime": {
-     "end_time": "2026-01-13T00:09:30.697122Z",
-     "start_time": "2026-01-13T00:09:30.669833Z"
+     "end_time": "2026-01-13T12:22:36.311297967Z",
+     "start_time": "2026-01-13T12:22:36.279657873Z"
     }
    },
    "source": "data = pd.read_csv('data/boston.csv', index_col=0)",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -235,8 +235,8 @@
    "metadata": {
     "id": "whPNpmlF86sh",
     "ExecuteTime": {
-     "end_time": "2026-01-13T00:53:57.703839Z",
-     "start_time": "2026-01-13T00:53:57.680224Z"
+     "end_time": "2026-01-13T12:22:42.938139632Z",
+     "start_time": "2026-01-13T12:22:42.832679711Z"
     }
    },
    "source": [
@@ -255,13 +255,13 @@
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-13T00:53:59.716719Z",
-     "start_time": "2026-01-13T00:53:59.685056Z"
+     "end_time": "2026-01-13T12:22:44.784723783Z",
+     "start_time": "2026-01-13T12:22:44.708878389Z"
     }
    },
    "cell_type": "code",
@@ -294,13 +294,13 @@
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-13T00:54:02.012859Z",
-     "start_time": "2026-01-13T00:54:01.985437Z"
+     "end_time": "2026-01-13T12:22:47.452160835Z",
+     "start_time": "2026-01-13T12:22:47.371117572Z"
     }
    },
    "cell_type": "code",
@@ -336,7 +336,7 @@
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -350,24 +350,37 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "m6d8j8H289F0"
+    "id": "m6d8j8H289F0",
+    "ExecuteTime": {
+     "end_time": "2026-01-13T12:23:31.947432803Z",
+     "start_time": "2026-01-13T12:23:31.822885769Z"
+    }
    },
-   "source": [
-    ""
+   "source": "print(data.isnull().sum())",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CRIM       0\n",
+      "ZN         0\n",
+      "INDUS      0\n",
+      "CHAS       0\n",
+      "NOX        0\n",
+      "RM         0\n",
+      "AGE        0\n",
+      "DIS        0\n",
+      "RAD        0\n",
+      "TAX        0\n",
+      "PTRATIO    0\n",
+      "B          0\n",
+      "LSTAT      0\n",
+      "PRICE      0\n",
+      "dtype: int64\n"
+     ]
+    }
    ],
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "id": "_PjhwDz889IW"
-   },
-   "source": [
-    ""
-   ],
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -400,35 +413,293 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "Qmf-vAdK8_he"
+    "id": "Qmf-vAdK8_he",
+    "ExecuteTime": {
+     "end_time": "2026-01-13T12:26:03.765822203Z",
+     "start_time": "2026-01-13T12:26:03.649801408Z"
+    }
    },
-   "source": [
-    ""
+   "source": "data.describe()",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "        CRIM     ZN  INDUS   CHAS    NOX     RM    AGE    DIS    RAD    TAX  \\\n",
+       "count 506.00 506.00 506.00 506.00 506.00 506.00 506.00 506.00 506.00 506.00   \n",
+       "mean    3.61  11.36  11.14   0.07   0.55   6.28  68.57   3.80   9.55 408.24   \n",
+       "std     8.60  23.32   6.86   0.25   0.12   0.70  28.15   2.11   8.71 168.54   \n",
+       "min     0.01   0.00   0.46   0.00   0.39   3.56   2.90   1.13   1.00 187.00   \n",
+       "25%     0.08   0.00   5.19   0.00   0.45   5.89  45.02   2.10   4.00 279.00   \n",
+       "50%     0.26   0.00   9.69   0.00   0.54   6.21  77.50   3.21   5.00 330.00   \n",
+       "75%     3.68  12.50  18.10   0.00   0.62   6.62  94.07   5.19  24.00 666.00   \n",
+       "max    88.98 100.00  27.74   1.00   0.87   8.78 100.00  12.13  24.00 711.00   \n",
+       "\n",
+       "       PTRATIO      B  LSTAT  PRICE  \n",
+       "count   506.00 506.00 506.00 506.00  \n",
+       "mean     18.46 356.67  12.65  22.53  \n",
+       "std       2.16  91.29   7.14   9.20  \n",
+       "min      12.60   0.32   1.73   5.00  \n",
+       "25%      17.40 375.38   6.95  17.02  \n",
+       "50%      19.05 391.44  11.36  21.20  \n",
+       "75%      20.20 396.23  16.96  25.00  \n",
+       "max      22.00 396.90  37.97  50.00  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CRIM</th>\n",
+       "      <th>ZN</th>\n",
+       "      <th>INDUS</th>\n",
+       "      <th>CHAS</th>\n",
+       "      <th>NOX</th>\n",
+       "      <th>RM</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>DIS</th>\n",
+       "      <th>RAD</th>\n",
+       "      <th>TAX</th>\n",
+       "      <th>PTRATIO</th>\n",
+       "      <th>B</th>\n",
+       "      <th>LSTAT</th>\n",
+       "      <th>PRICE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>506.00</td>\n",
+       "      <td>506.00</td>\n",
+       "      <td>506.00</td>\n",
+       "      <td>506.00</td>\n",
+       "      <td>506.00</td>\n",
+       "      <td>506.00</td>\n",
+       "      <td>506.00</td>\n",
+       "      <td>506.00</td>\n",
+       "      <td>506.00</td>\n",
+       "      <td>506.00</td>\n",
+       "      <td>506.00</td>\n",
+       "      <td>506.00</td>\n",
+       "      <td>506.00</td>\n",
+       "      <td>506.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.61</td>\n",
+       "      <td>11.36</td>\n",
+       "      <td>11.14</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>6.28</td>\n",
+       "      <td>68.57</td>\n",
+       "      <td>3.80</td>\n",
+       "      <td>9.55</td>\n",
+       "      <td>408.24</td>\n",
+       "      <td>18.46</td>\n",
+       "      <td>356.67</td>\n",
+       "      <td>12.65</td>\n",
+       "      <td>22.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>8.60</td>\n",
+       "      <td>23.32</td>\n",
+       "      <td>6.86</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>28.15</td>\n",
+       "      <td>2.11</td>\n",
+       "      <td>8.71</td>\n",
+       "      <td>168.54</td>\n",
+       "      <td>2.16</td>\n",
+       "      <td>91.29</td>\n",
+       "      <td>7.14</td>\n",
+       "      <td>9.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>3.56</td>\n",
+       "      <td>2.90</td>\n",
+       "      <td>1.13</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>187.00</td>\n",
+       "      <td>12.60</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>5.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>5.19</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>5.89</td>\n",
+       "      <td>45.02</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>279.00</td>\n",
+       "      <td>17.40</td>\n",
+       "      <td>375.38</td>\n",
+       "      <td>6.95</td>\n",
+       "      <td>17.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>9.69</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>6.21</td>\n",
+       "      <td>77.50</td>\n",
+       "      <td>3.21</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>330.00</td>\n",
+       "      <td>19.05</td>\n",
+       "      <td>391.44</td>\n",
+       "      <td>11.36</td>\n",
+       "      <td>21.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>3.68</td>\n",
+       "      <td>12.50</td>\n",
+       "      <td>18.10</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>6.62</td>\n",
+       "      <td>94.07</td>\n",
+       "      <td>5.19</td>\n",
+       "      <td>24.00</td>\n",
+       "      <td>666.00</td>\n",
+       "      <td>20.20</td>\n",
+       "      <td>396.23</td>\n",
+       "      <td>16.96</td>\n",
+       "      <td>25.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>88.98</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>27.74</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>8.78</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>12.13</td>\n",
+       "      <td>24.00</td>\n",
+       "      <td>711.00</td>\n",
+       "      <td>22.00</td>\n",
+       "      <td>396.90</td>\n",
+       "      <td>37.97</td>\n",
+       "      <td>50.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
    ],
-   "execution_count": null,
-   "outputs": []
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "metadata": {
-    "id": "PXTtM-Ny8_6C"
+    "id": "PXTtM-Ny8_6C",
+    "ExecuteTime": {
+     "end_time": "2026-01-13T12:28:24.667425082Z",
+     "start_time": "2026-01-13T12:28:24.583128774Z"
+    }
    },
    "source": [
-    ""
+    "avg_price = data.PRICE.mean()\n",
+    "print(f'Average Price: {avg_price:.2f}')"
    ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Price: 22.53\n"
+     ]
+    }
+   ],
+   "execution_count": 10
   },
   {
    "cell_type": "code",
    "metadata": {
-    "id": "sJOkC5hI8_fF"
+    "id": "sJOkC5hI8_fF",
+    "ExecuteTime": {
+     "end_time": "2026-01-13T12:29:45.516767072Z",
+     "start_time": "2026-01-13T12:29:45.425123903Z"
+    }
    },
    "source": [
-    ""
+    "min_CHAS = data.CHAS.min()\n",
+    "max_CHAS = data.CHAS.max()\n",
+    "print(f'Minimum CHAS: {min_CHAS:.2f}\\nMaximum CHAS: {max_CHAS:.2f}')"
    ],
-   "execution_count": null,
-   "outputs": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum CHAS: 0.00\n",
+      "Maximum CHAS: 1.00\n"
+     ]
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-13T12:30:40.442260278Z",
+     "start_time": "2026-01-13T12:30:40.355276441Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "avg_rooms = data.RM.mean()\n",
+    "print(f'Average Rooms: {avg_rooms:.2f}')"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Rooms: 6.28\n"
+     ]
+    }
+   ],
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
