--- a/81-predict-house-prices/Multivariable_Regression_and_Valuation_Model.ipynb
+++ b/81-predict-house-prices/Multivariable_Regression_and_Valuation_Model.ipynb
@@ -103,8 +103,8 @@
    "metadata": {
     "id": "3iYmJ3Fb-d2i",
     "ExecuteTime": {
-     "end_time": "2026-01-13T21:01:15.106085Z",
-     "start_time": "2026-01-13T21:01:14.794292Z"
+     "end_time": "2026-01-13T23:38:36.590112Z",
+     "start_time": "2026-01-13T23:38:36.579837Z"
     }
    },
    "source": [
@@ -114,11 +114,11 @@
     "import seaborn as sns\n",
     "import plotly.express as px\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 50
   },
   {
    "metadata": {
@@ -2289,30 +2289,17 @@
    "metadata": {
     "id": "e9o1cpLr9dKl",
     "ExecuteTime": {
-     "end_time": "2026-01-13T21:01:16.686171Z",
-     "start_time": "2026-01-13T21:01:16.669027Z"
+     "end_time": "2026-01-13T23:55:03.591983Z",
+     "start_time": "2026-01-13T23:55:03.561328Z"
     }
    },
    "source": [
-    ""
+    "target = data['PRICE']\n",
+    "features = data.drop('PRICE', axis=1)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, target, test_size=.2,random_state=10)"
    ],
    "outputs": [],
-   "execution_count": 18
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "id": "0kfcVnfy9ffj",
-    "ExecuteTime": {
-     "end_time": "2026-01-13T21:01:16.714200Z",
-     "start_time": "2026-01-13T21:01:16.700003Z"
-    }
-   },
-   "source": [
-    ""
-   ],
-   "outputs": [],
-   "execution_count": 18
+   "execution_count": 52
   },
   {
    "cell_type": "markdown",
@@ -2345,30 +2332,42 @@
    "metadata": {
     "id": "-H1x3WmG9guW",
     "ExecuteTime": {
-     "end_time": "2026-01-13T21:01:16.743520Z",
-     "start_time": "2026-01-13T21:01:16.727529Z"
+     "end_time": "2026-01-14T00:21:12.743868Z",
+     "start_time": "2026-01-14T00:21:12.728301Z"
     }
    },
    "source": [
-    ""
+    "# creating a regression model\n",
+    "model = LinearRegression()"
    ],
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 56
   },
   {
    "cell_type": "code",
    "metadata": {
     "id": "u6NKCvUK9iEP",
     "ExecuteTime": {
-     "end_time": "2026-01-13T21:01:16.769035Z",
-     "start_time": "2026-01-13T21:01:16.754715Z"
+     "end_time": "2026-01-14T00:23:57.360530Z",
+     "start_time": "2026-01-14T00:23:57.337402Z"
     }
    },
    "source": [
-    ""
+    "# fitting the model\n",
+    "model.fit(X_train,y_train)\n",
+    "r_sq = model.score(X_train,y_train)\n",
+    "print(f'R-squared: {r_sq:.2f}')"
    ],
-   "outputs": [],
-   "execution_count": 18
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R-squared: 0.75\n"
+     ]
+    }
+   ],
+   "execution_count": 59
   },
   {
    "cell_type": "markdown",
